--- a/trunk/src/org/ivydependencyimportor/ivy/idea/res/ivy_zh_CN.properties
+++ b/trunk/src/org/ivydependencyimportor/ivy/idea/res/ivy_zh_CN.properties
@@ -3,3 +3,4 @@ distribution_libs_path=\u5e93\u6587\u4ef6\u8def\u5f84:
 artifact_pattern=\u53d1\u5e03\u4ea7\u54c1\u683c\u5f0f:
 full_artifact_url=\u53d1\u5e03\u4ea7\u54c1\u5168\u8def\u5f84:
 configuration=\u914d\u7f6e:
+transitive=\u662f\u5426\u4f9d\u8d56\u5bfc\u5165\uff1f
